--- a/GTSW/Bumblebee/Bumblebee/Login.xaml
+++ b/GTSW/Bumblebee/Bumblebee/Login.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="Bumblebee.Login"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="系统登录" Height="150" Width="270" WindowStartupLocation="CenterScreen"
-        ResizeMode="NoResize" Loaded="Window_Loaded" Icon="/Bumblebee;component/Resources/login.ico">
+        Title="系统登录" Height="150" Width="300" WindowStartupLocation="CenterScreen"
+        ResizeMode="NoResize" Loaded="Window_Loaded" Icon="/Bumblebee;component/Resources/loginlogo_small.jpg">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="5"/>
@@ -13,13 +13,15 @@
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
-        <Label Content="用户名" Grid.Row="1" Grid.Column="0"  HorizontalAlignment="Right" VerticalAlignment="Center" />
-        <Label Content="密码" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" />
-        <ComboBox Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" SelectedIndex="0" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
+        <Image Grid.Row="0" Grid.RowSpan="6" Grid.Column="0" Source="resources/loginlogo.jpg"/>
+        <Label Content="用户名" Grid.Row="1" Grid.Column="1"  HorizontalAlignment="Right" VerticalAlignment="Center" />
+        <Label Content="密码" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" />
+        <ComboBox Grid.Row="1" Grid.Column="3" Width="112" Height="25"  SelectedIndex="0" 
+                  HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                   HorizontalAlignment="Left" VerticalAlignment="Center" Name="cboxLoginName">
             <ComboBoxItem Content="admin"/>
             <ComboBoxItem Content="user"/>
@@ -28,13 +30,13 @@
                  VerticalAlignment="Center" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                  Text="{Binding Path=UserName,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                  TextChanged="UserName_TextBox_TextChanged"/-->
-        <PasswordBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" 
+        <PasswordBox Grid.Row="2" Grid.Column="3" HorizontalAlignment="Stretch" 
                      VerticalAlignment="Center" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"
                      Name="pwboxPassword" PasswordChar="*" PasswordChanged="Password_PasswordChanged"/>
-        <Button Grid.Row="4" Grid.Column="1" Margin="0,3,-45,1" Width="75" Content="确认" Click="OK_Button_Click"
+        <Button Grid.Row="4" Grid.Column="1" Margin="0,3,-40,1" Width="75" Content="确认" Click="OK_Button_Click"
                 IsEnabled="{Binding Path=OKEnabled,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                 IsDefault="{Binding Path=OKDefault,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
-        <Button Grid.Row="4" Grid.Column="2" Margin="0,3,-15,1" Width="75" Content="取消" IsCancel="True" 
+        <Button Grid.Row="4" Grid.Column="2" Margin="0,3,-35,1" Width="75" Content="取消" IsCancel="True" 
                 IsDefault="{Binding Path=CancelDefault,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" Click="Cancel_Button_Click"/>
     </Grid>
 </Window>
