--- a/GTSW/Bumblebee/Bumblebee/About.xaml
+++ b/GTSW/Bumblebee/Bumblebee/About.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="Bumblebee.About"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="关于..." Height="180" Width="400" ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
-        Icon="/Bumblebee;component/Resources/loginlogo_small.jpg">
+        Title="关于..." Height="200" Width="400" ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
+        Icon="/Bumblebee;component/Resources/loginlogo_small.jpg" FontFamily="Microsoft YaHei" FontSize="14">
     <Grid Margin="3">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
@@ -22,7 +22,7 @@
                HorizontalAlignment="Left" VerticalAlignment="Center" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
         <Label Grid.Row="2" Grid.Column="1" Content="{Binding Path=Label2Content,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                HorizontalAlignment="Left" VerticalAlignment="Center" HorizontalContentAlignment="Left" VerticalContentAlignment="Center"/>
-        <Button Grid.Row="3" Grid.Column="1" Content="OK" Width="80" Height="28" IsCancel="True" IsDefault="True" 
+        <Button Grid.Row="3" Grid.Column="1" Content="确认" Width="80" Height="28" IsCancel="True" IsDefault="True" 
                 HorizontalAlignment="Right" VerticalAlignment="Center" Click="OK_Button_Click"/>  
     </Grid>
 </Window>
