--- a/GTSW/Bumblebee/Bumblebee/ExtSetCmd/SinglePulseCount.xaml
+++ b/GTSW/Bumblebee/Bumblebee/ExtSetCmd/SinglePulseCount.xaml
@@ -2,8 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="传感器单圈脉冲数" Height="120" Width="240"
-        WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="传感器单圈脉冲数" Height="120" Width="270"
+        WindowStartupLocation="CenterScreen" ResizeMode="NoResize" FontFamily="Microsoft YaHei" FontSize="14">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="5"/>
@@ -13,8 +13,8 @@
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
         <Label Grid.Row="1" Grid.Column="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" 
                Content="单圈脉冲数 :"/>
