--- a/GTSW/Bumblebee/Bumblebee/ExtSetCmd/StateConfiguration.xaml
+++ b/GTSW/Bumblebee/Bumblebee/ExtSetCmd/StateConfiguration.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="Bumblebee.ExtSetCmd.StateConfiguration"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="设置信号量有效状态" Height="300" Width="200"
-        WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Loaded="Window_Loaded">
+        Title="设置信号量有效状态" Height="360" Width="200"
+        WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Loaded="Window_Loaded" FontFamily="Microsoft YaHei" FontSize="14">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="5"/>
@@ -37,42 +37,42 @@
                 Click="OK_Button_Click"/>
         <Button Grid.Row="10" Grid.Column="1" Margin="25,3,0,1" Width="75" Content="取消" IsCancel="True" 
                 Click="Cancel_Button_Click"/>
-        <ComboBox Grid.Row="1" Grid.Column="1" Margin="0,2,2,2" SelectedIndex="0" Name="cboxD7">
+        <ComboBox Grid.Row="1" Grid.Column="1" Margin="0,2,2,2" SelectedIndex="0" Name="cboxD7" HorizontalContentAlignment="Left" VerticalContentAlignment="Center">
             <ComboBoxItem Content="高有效"/>
             <ComboBoxItem Content="低有效"/>
             <ComboBoxItem Content="未启用"/>
         </ComboBox>
-        <ComboBox Grid.Row="2" Grid.Column="1" Margin="0,2,2,2" SelectedIndex="0" Name="cboxD6">
+        <ComboBox Grid.Row="2" Grid.Column="1" Margin="0,2,2,2" SelectedIndex="0" Name="cboxD6" HorizontalContentAlignment="Left" VerticalContentAlignment="Center">
             <ComboBoxItem Content="高有效"/>
             <ComboBoxItem Content="低有效"/>
             <ComboBoxItem Content="未启用"/>
         </ComboBox>
-        <ComboBox Grid.Row="3" Grid.Column="1" Margin="0,2,2,2" SelectedIndex="0" Name="cboxD5">
+        <ComboBox Grid.Row="3" Grid.Column="1" Margin="0,2,2,2" SelectedIndex="0" Name="cboxD5" HorizontalContentAlignment="Left" VerticalContentAlignment="Center">
             <ComboBoxItem Content="高有效"/>
             <ComboBoxItem Content="低有效"/>
             <ComboBoxItem Content="未启用"/>
         </ComboBox>
-        <ComboBox Grid.Row="4" Grid.Column="1" Margin="0,2,2,2" SelectedIndex="0" Name="cboxD4">
+        <ComboBox Grid.Row="4" Grid.Column="1" Margin="0,2,2,2" SelectedIndex="0" Name="cboxD4" HorizontalContentAlignment="Left" VerticalContentAlignment="Center">
             <ComboBoxItem Content="高有效"/>
             <ComboBoxItem Content="低有效"/>
             <ComboBoxItem Content="未启用"/>
         </ComboBox>
-        <ComboBox Grid.Row="5" Grid.Column="1" Margin="0,2,2,2" SelectedIndex="0" Name="cboxD3">
+        <ComboBox Grid.Row="5" Grid.Column="1" Margin="0,2,2,2" SelectedIndex="0" Name="cboxD3" HorizontalContentAlignment="Left" VerticalContentAlignment="Center">
             <ComboBoxItem Content="高有效"/>
             <ComboBoxItem Content="低有效"/>
             <ComboBoxItem Content="未启用"/>
         </ComboBox>
-        <ComboBox Grid.Row="6" Grid.Column="1" Margin="0,2,2,2" SelectedIndex="0" Name="cboxD2">
+        <ComboBox Grid.Row="6" Grid.Column="1" Margin="0,2,2,2" SelectedIndex="0" Name="cboxD2" HorizontalContentAlignment="Left" VerticalContentAlignment="Center">
             <ComboBoxItem Content="高有效"/>
             <ComboBoxItem Content="低有效"/>
             <ComboBoxItem Content="未启用"/>
         </ComboBox>
-        <ComboBox Grid.Row="7" Grid.Column="1" Margin="0,2,2,2" SelectedIndex="0" Name="cboxD1">
+        <ComboBox Grid.Row="7" Grid.Column="1" Margin="0,2,2,2" SelectedIndex="0" Name="cboxD1" HorizontalContentAlignment="Left" VerticalContentAlignment="Center">
             <ComboBoxItem Content="高有效"/>
             <ComboBoxItem Content="低有效"/>
             <ComboBoxItem Content="未启用"/>
         </ComboBox>
-        <ComboBox Grid.Row="8" Grid.Column="1" Margin="0,2,2,2" SelectedIndex="0" Name="cboxD0">
+        <ComboBox Grid.Row="8" Grid.Column="1" Margin="0,2,2,2" SelectedIndex="0" Name="cboxD0" HorizontalContentAlignment="Left" VerticalContentAlignment="Center">
             <ComboBoxItem Content="高有效"/>
             <ComboBoxItem Content="低有效"/>
             <ComboBoxItem Content="未启用"/>
