--- a/GTSW/Bumblebee/Bumblebee/GetCmdConfiguration.xaml
+++ b/GTSW/Bumblebee/Bumblebee/GetCmdConfiguration.xaml
@@ -2,9 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        Title="采集指令配置" Height="180" Width="360" 
+        Title="采集指令配置" Height="200" Width="360" 
         xmlns:shared="http://schemas.actiprosoftware.com/winfx/xaml/shared"
-        WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        WindowStartupLocation="CenterScreen" ResizeMode="NoResize" FontFamily="Microsoft YaHei" FontSize="14">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="5"/>
