--- a/GTSW/Bumblebee/Bumblebee/ServerConfiguration.xaml
+++ b/GTSW/Bumblebee/Bumblebee/ServerConfiguration.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        Title="设置管理平台参数" Height="150" Width="300" WindowStartupLocation="CenterScreen" Icon="/Bumblebee;component/Resources/serverconfig.ico">
+        Title="设置管理平台参数" Height="170" Width="300" FontFamily="Microsoft YaHei" FontSize="14"
+        WindowStartupLocation="CenterScreen" Icon="/Bumblebee;component/Resources/serverconfig.ico">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="10"/>
