--- a/GTSW/Bumblebee/Bumblebee/SetCmd/RecorederPulseCoefficient.xaml
+++ b/GTSW/Bumblebee/Bumblebee/SetCmd/RecorederPulseCoefficient.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         Title="记录仪脉冲系数" Height="120" Width="240"
-        WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        WindowStartupLocation="CenterScreen" ResizeMode="NoResize" FontFamily="Microsoft YaHei" FontSize="14">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="5"/>
