--- a/GTSW/Bumblebee/Bumblebee/SetCmd/StateConfigureInformation.xaml
+++ b/GTSW/Bumblebee/Bumblebee/SetCmd/StateConfigureInformation.xaml
@@ -1,9 +1,9 @@
 ﻿<Window x:Class="Bumblebee.SetCmd.StateConfigureInformation"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="StateConfigureInformation" Height="135" Width="640"
+        Title="状态信号配置信息" Height="135" Width="640"
         WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
-        Loaded="Window_Loaded">
+        Loaded="Window_Loaded" FontFamily="Microsoft YaHei" FontSize="14">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="5"/>
