--- a/GTSW/Bumblebee/Bumblebee/SetCmd/VehicleInformation.xaml
+++ b/GTSW/Bumblebee/Bumblebee/SetCmd/VehicleInformation.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="Bumblebee.SetCmd.VehicleInformation"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="设置车辆信息参数" Height="180" Width="300" WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
-        Loaded="Window_Loaded">
+        Title="设置车辆信息参数" Height="180" Width="330" WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
+        Loaded="Window_Loaded" FontFamily="Microsoft YaHei" FontSize="14">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="5"/>
