--- a/GTSW/Bumblebee/Bumblebee/TimeoutConfiguration.xaml
+++ b/GTSW/Bumblebee/Bumblebee/TimeoutConfiguration.xaml
@@ -2,7 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        Title="设置超时时间" Height="260" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="/Bumblebee;component/Resources/timeoutconfig.ico">
+        Title="设置超时时间" Height="290" Width="350" ResizeMode="NoResize"
+        FontFamily="Microsoft YaHei" FontSize="14"
+        WindowStartupLocation="CenterScreen" Icon="/Bumblebee;component/Resources/timeoutconfig.ico">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="10"/>
