--- a/GTSW/Bumblebee/Bumblebee/ServerConfiguration.xaml
+++ b/GTSW/Bumblebee/Bumblebee/ServerConfiguration.xaml
@@ -25,7 +25,7 @@
         <xctk:IntegerUpDown  Grid.Column="1" Grid.Row="2" Minimum="1" Maximum="65535"
                              HorizontalAlignment="Stretch" VerticalAlignment="Center"
                              Value="{Binding Path=ServerPort,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
-        <Button Grid.Row="4" Grid.Column="1" Margin="40,3,-20,2" Width="75" Content="确认" Click="OK_Button_Click"/>
-        <Button Grid.Row="4" Grid.Column="2" Margin="20,3,2,2" Width="75" Content="取消" IsCancel="True" IsDefault="True" Click="Cancel_Button_Click"/>
+        <Button Grid.Row="4" Grid.Column="1" Margin="40,3,-20,2" Width="75" Content="确认" Click="OK_Button_Click" Height="27"/>
+        <Button Grid.Row="4" Grid.Column="2" Margin="20,3,2,2" Width="75" Content="取消" IsCancel="True" Height="27" IsDefault="True" Click="Cancel_Button_Click"/>
     </Grid>
 </Window>
