--- a/GTSW/Bumblebee/Bumblebee/SetCmd/Recorder1stInstallDateTime.xaml
+++ b/GTSW/Bumblebee/Bumblebee/SetCmd/Recorder1stInstallDateTime.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="记录仪初次安装日期" Height="120" Width="390"
+        Title="记录仪初次安装日期" Height="130" Width="390"
         WindowStartupLocation="CenterScreen" ResizeMode="NoResize" FontFamily="Microsoft YaHei" FontSize="14">
     <Grid>
         <Grid.RowDefinitions>
@@ -18,9 +18,9 @@
         </Grid.ColumnDefinitions>
         <Label Grid.Row="1" Grid.Column="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" 
                Content="初次安装日期 :"/>
-        <Button Grid.Row="3" Grid.Column="1" Margin="5,5,0,1" Width="75" Content="确认" IsDefault="True"
+        <Button Grid.Row="3" Grid.Column="1" Margin="5,5,0,1" Width="75" Height="27" Content="确认" IsDefault="True"
                 Click="OK_Button_Click"/>
-        <Button Grid.Row="3" Grid.Column="1" Margin="165,5,0,1" Width="75" Content="取消" IsCancel="True" 
+        <Button Grid.Row="3" Grid.Column="1" Margin="165,5,0,1" Width="75" Height="27" Content="取消" IsCancel="True" 
                 Click="Cancel_Button_Click"/>
         <xctk:DateTimePicker Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" Name="dtpickerStart"
                              HorizontalAlignment="Stretch" VerticalAlignment="Center"
