--- a/GTSW/Bumblebee/Bumblebee/SetCmd/RecorderDateTime.xaml
+++ b/GTSW/Bumblebee/Bumblebee/SetCmd/RecorderDateTime.xaml
@@ -22,11 +22,11 @@
                Content="系统模式 :" Foreground="{Binding Path=DateTimeForeground,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
         <Label Grid.Row="2" Grid.Column="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"
                Content="自定义模式 :" Foreground="{Binding Path=DateTimeForeground,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
-        <Button Grid.Row="4" Grid.Column="1" Margin="150,3,-30,1" Width="75" Content="确认"
+        <Button Grid.Row="4" Grid.Column="1" Margin="150,3,-30,1" Width="75" Content="确认" Height="27"
                 IsEnabled="{Binding Path=OKEnabled,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                 IsDefault="{Binding Path=OKDefault,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                 Click="OK_Button_Click"/>
-        <Button Grid.Row="4" Grid.Column="2" Margin="20,3,0,1" Width="75" Content="取消" IsCancel="True" 
+        <Button Grid.Row="4" Grid.Column="2" Margin="20,3,0,1" Width="75" Height="27" Content="取消" IsCancel="True" 
                 IsDefault="{Binding Path=CancelDefault,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                 Click="Cancel_Button_Click"/>
         <RadioButton Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" IsThreeState="False"
