--- a/GTSW/Bumblebee/Bumblebee/SetCmd/StateConfigureInformation.xaml
+++ b/GTSW/Bumblebee/Bumblebee/SetCmd/StateConfigureInformation.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Bumblebee.SetCmd.StateConfigureInformation"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="状态信号配置信息" Height="135" Width="640"
+        Title="状态信号配置信息" Height="150" Width="640"
         WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
         Loaded="Window_Loaded" FontFamily="Microsoft YaHei" FontSize="14">
     <Grid>
@@ -49,11 +49,11 @@
                Content="远光"/>
         <Label Grid.Row="2" Grid.Column="4" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" 
                Content="近光"/>
-        <Button Grid.Row="4" Grid.Column="6" Margin="-5,1,5,1" Content="确认"
+        <Button Grid.Row="4" Grid.Column="6" Margin="-5,1,5,1" Content="确认" Height="27"
                 IsEnabled="{Binding Path=OKEnabled,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                 IsDefault="{Binding Path=OKDefault,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                 Click="OK_Button_Click"/>
-        <Button Grid.Row="4" Grid.Column="7" Margin="0,1,0,1" Width="75" Content="取消" IsCancel="True" 
+        <Button Grid.Row="4" Grid.Column="7" Margin="0,1,0,1" Width="75" Height="27" Content="取消" IsCancel="True" 
                 IsDefault="{Binding Path=CancelDefault,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                 Click="Cancel_Button_Click"/>
         <TextBox Grid.Column="5" Grid.Row="2" Name="txtD2" Margin="1,0,0,0"
