--- a/GTSW/Bumblebee/Bumblebee/SetCmd/VehicleInformation.xaml
+++ b/GTSW/Bumblebee/Bumblebee/SetCmd/VehicleInformation.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Bumblebee.SetCmd.VehicleInformation"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="设置车辆信息参数" Height="180" Width="330" WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
+        Title="设置车辆信息参数" Height="190" Width="330" WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
         Loaded="Window_Loaded" FontFamily="Microsoft YaHei" FontSize="14">
     <Grid>
         <Grid.RowDefinitions>
@@ -22,11 +22,11 @@
         <Label Grid.Row="2" Grid.Column="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center"
                Content="车辆号牌号码 :" Foreground="{Binding Path=VehicleNumberCodeForeground,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"/>
         <Label Grid.Row="3" Grid.Column="0" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" Content="车辆号牌分类 :"/>
-        <Button Grid.Row="5" Grid.Column="1" Margin="-50,3,0,1" Width="75" Content="确认"
+        <Button Grid.Row="5" Grid.Column="1" Margin="-50,3,0,1" Width="75" Content="确认" Height="27"
                 IsEnabled="{Binding Path=OKEnabled,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                 IsDefault="{Binding Path=OKDefault,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                 Click="OK_Button_Click"/>
-        <Button Grid.Row="5" Grid.Column="1" Margin="105,3,0,1" Width="75" Content="取消" IsCancel="True" 
+        <Button Grid.Row="5" Grid.Column="1" Margin="105,3,0,1" Width="75" Content="取消" IsCancel="True"  Height="27"
                 IsDefault="{Binding Path=CancelDefault,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
                 Click="Cancel_Button_Click"/>
         <TextBox Grid.Column="1" Grid.Row="1" Name="txtVehicleIDCode"
