--- a/GTSW/Bumblebee/Bumblebee/TimeoutConfiguration.xaml
+++ b/GTSW/Bumblebee/Bumblebee/TimeoutConfiguration.xaml
@@ -2,12 +2,18 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        Title="设置超时时间" Height="290" Width="350" ResizeMode="NoResize"
+        Title="设置超时时间" Height="430" Width="400" ResizeMode="NoResize"
         FontFamily="Microsoft YaHei" FontSize="14"
         WindowStartupLocation="CenterScreen" Icon="/Bumblebee;component/Resources/timeoutconfig.ico">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="10"/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
@@ -33,6 +39,13 @@
         <Label Grid.Row="5" Grid.Column="2" Margin="30,0,0,0" Content="(ms)" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Label Grid.Row="6" Grid.Column="0" Content="命令间隔" HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <Label Grid.Row="6" Grid.Column="2" Margin="30,0,0,0" Content="(ms)" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Grid.Row="7" Grid.Column="0" Content="检定间隔" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <Label Grid.Row="7" Grid.Column="2" Margin="30,0,0,0" Content="(ms)" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="4" Content="注 : 读写间隔指发送命令以后读取响应之间的等待时间." HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="4" Content="      命令间隔是指发送多条命令时,每条命令之间的等待时间." HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="4" Content="      检定间隔是指检定命令发送和读取响应之间的等待时间" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="4" Content="          和每条检定命令之间的等待时间.数值如果过大可能" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Label Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="4" Content="          会导致检定失败，数值过小可能会导致错误帧." HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <xctk:IntegerUpDown  Grid.Column="1" Grid.Row="1" Margin="0,0,-30,0" Minimum="1000" Maximum="120000"
                              HorizontalAlignment="Stretch" VerticalAlignment="Center"
                              Value="{Binding Path=TimeOut,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
@@ -42,7 +55,10 @@
         <xctk:IntegerUpDown  Grid.Column="1" Grid.Row="6" Margin="0,0,-30,0" Minimum="1000" Maximum="10000"
                              HorizontalAlignment="Stretch" VerticalAlignment="Center"
                              Value="{Binding Path=CmdInterval,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
-        <Button Grid.Row="8" Grid.Column="2" Margin="-80,2,10,2" Width="75" Content="确认" Click="OK_Button_Click" Height="27"/>
-        <Button Grid.Row="8" Grid.Column="3" Margin="-45,2,2,2" Width="75" Content="取消" IsCancel="True" Height="27" IsDefault="True" Click="Cancel_Button_Click"/>
+        <xctk:IntegerUpDown  Grid.Column="1" Grid.Row="7" Margin="0,0,-30,0" Minimum="1000" Maximum="10000"
+                             HorizontalAlignment="Stretch" VerticalAlignment="Center"
+                             Value="{Binding Path=ChkInterval,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+        <Button Grid.Row="14" Grid.Column="2" Margin="-80,0,10,0" Width="75" Content="确认" Click="OK_Button_Click" Height="27"/>
+        <Button Grid.Row="14" Grid.Column="3" Margin="-45,0,2,0" Width="75" Content="取消" IsCancel="True" Height="27" IsDefault="True" Click="Cancel_Button_Click"/>
     </Grid>
 </Window>
