--- a/GTSW/Bumblebee/Bumblebee/MainWindow.xaml
+++ b/GTSW/Bumblebee/Bumblebee/MainWindow.xaml
@@ -2,9 +2,25 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:bb="clr-namespace:Bumblebee"
+        xmlns:dc="clr-namespace:System.Windows.Controls.DataVisualization;assembly=System.Windows.Controls.DataVisualization.Toolkit"
+        xmlns:dvc="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
         Title="GB/T 19056-2013数据分析软件" Width="900" Height="600" WindowStartupLocation="CenterScreen"
         Loaded="Window_Loaded" Icon="/Bumblebee;component/Resources/loginlogo_small.jpg" FontFamily="Microsoft YaHei" FontSize="14">
     <Window.Resources>
+        <Style x:Key="lineDataPointStyle" TargetType="dvc:LineDataPoint">
+            <Setter Property="Foreground" Value="DarkGreen"/>
+            <Setter Property="IsTabStop" Value="False"/>
+            <Setter Property="Width" Value="NaN"/>
+            <Setter Property="Height" Value="NaN"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="dvc:LineDataPoint">
+                        <Grid x:Name="Root" Opacity="0">
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
         <LinearGradientBrush x:Key="StatusBarBG" StartPoint="0, 0" EndPoint="0, 1">
             <GradientStop Color="White" Offset="0"/>
             <GradientStop Color="#FFC0C9D4" Offset="0.5"/>
@@ -600,6 +616,47 @@
                         </GroupBox>
                     </Grid>
                 </TabItem>
+                <!--TabItem Header="图表">
+                    <DockPanel>
+                        <Grid Name="imgSpeed" DockPanel.Dock="Top" Width="750" Height="250">
+                            <Grid.RowDefinitions>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                            </Grid.RowDefinitions>
+                            <Rectangle Fill="LightGray" Margin="5">
+                                
+                            </Rectangle>
+                        </Grid>
+                        <Grid/>
+                        <dvc:Chart Name="chartSpeed" Grid.Row="0" Grid.Column="0" DockPanel.Dock="Top" Height="250" Width="750">
+                            <dvc:Chart.LegendStyle>
+                                <Style TargetType="Control">
+                                    <Setter Property="Width" Value="0"/>
+                                    <Setter Property="Height" Value="0"/>
+                                </Style>
+                            </dvc:Chart.LegendStyle>
+                            <dvc:Chart.TitleStyle>
+                                <Style TargetType="Control">
+                                    <Setter Property="Width" Value="0"/>
+                                    <Setter Property="Height" Value="0"/>
+                                </Style>
+                            </dvc:Chart.TitleStyle>
+                            <dvc:Chart.Series>
+                                <dvc:LineSeries DataPointStyle="{StaticResource lineDataPointStyle}" DependentValuePath="Value" IndependentValuePath="Key" ItemsSource="{Binding}" IsSelectionEnabled="True" Visibility="Visible"/>
+                                <dvc:LineSeries DependentValuePath="Value" IndependentValuePath="Key" ItemsSource="{Binding [1]}" IsSelectionEnabled="True" Visibility="Visible"/>
+                                <dvc:LineSeries DependentValuePath="Value" IndependentValuePath="Key" ItemsSource="{Binding [2]}" IsSelectionEnabled="True" Visibility="Visible"/>
+                                <dvc:LineSeries DependentValuePath="Value" IndependentValuePath="Key" ItemsSource="{Binding [3]}" IsSelectionEnabled="True" Visibility="Visible"/>
+                                <dvc:LineSeries DependentValuePath="Value" IndependentValuePath="Key" ItemsSource="{Binding [4]}" IsSelectionEnabled="True" Visibility="Visible"/>
+                                <dvc:LineSeries DependentValuePath="Value" IndependentValuePath="Key" ItemsSource="{Binding [5]}" IsSelectionEnabled="True" Visibility="Visible"/>
+                                <dvc:LineSeries DependentValuePath="Value" IndependentValuePath="Key" ItemsSource="{Binding [6]}" IsSelectionEnabled="True" Visibility="Visible"/>
+                                <dvc:LineSeries DependentValuePath="Value" IndependentValuePath="Key" ItemsSource="{Binding [7]}" IsSelectionEnabled="True" Visibility="Visible"/>
+                            </dvc:Chart.Series>
+                        </dvc:Chart>
+                    </DockPanel>
+                </TabItem-->
             </TabControl>
         </Grid>
     </DockPanel>
